--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "framer-motion": "^10.12.21",
     "google-fonts-webpack-plugin": "^0.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
