--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "google-fonts-webpack-plugin": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
